test/files/neg/bug691.check
bug691.scala:27: error: ambiguous parent class qualifier
    trait TiC extends super[Arrow].Ti2 with super[AssignArrow].Ti1;
                      ^
one error found
